--- a/01-HTML-CSS/06-BEM model/amazon/service.html
+++ b/01-HTML-CSS/06-BEM model/amazon/service.html
@@ -26,16 +26,6 @@
         <div class="upperHeader__searchBar"><input type="search" value="search"></div>
         <div class="upperHeader__flag"><i class="fas fa-flag-usa"></i></div>
         <div class="upperHeader__cart"><i class="fas fa-cart-plus"></i></div>
-
-
-        <div class="mainButton">
-
-            <div class="button1"></div>
-            <div class="button2"></div>
-            <div class="button3"></div>
-
-        </div>
-
     </div>
 
     <div class="lowerHeader">
@@ -44,8 +34,20 @@
         <div class="lowerHeader__item"><a href="Service.html">Service</a></div>
         <div class="lowerHeader__item"><a href="Registry.html">Registry</a></div>
     </div>
+    <div class="serviceGrid">
 
+        <div class="serviceGrid__title"></div>
+        <div class="serviceGrid__option"></div>
+        <div class="serviceGrid__option"></div>
+        <div class="serviceGrid__option"></div>
+        <div class="serviceGrid__option"></div>
+        <div class="serviceGrid__option"></div>
+        <div class="serviceGrid__option"></div>
+        <div class="serviceGrid__option"></div>
+        <div class="serviceGrid__option"></div>
+        <div class="serviceGrid__option"></div>
 
+    </div>
 </body>
 
 </html>
