--- a/01-HTML-CSS/06-BEM model/LEON JENYA OREN/sport.html
+++ b/01-HTML-CSS/06-BEM model/LEON JENYA OREN/sport.html
@@ -40,15 +40,15 @@
     <div class=main-articles>
         <div class="main-articles__bigarticle">
             <img src="img/liverpool.jpg" alt="">
-            <p class='main-articles__text'>Liverpool moved second </p>
+            <p class='main-articles__text'><span>|</span>Liverpool moved second </p>
         </div>
         <div class="main-articles__article">
             <img src="img/benfica.jpg" alt="">
-            <p class='article__text'>Benfica's clash with Belenenses </p>
+            <p class='article__text'><span>|</span>Benfica's clash with Belenenses </p>
         </div>
         <div class="main-articles__article">
             <img src="img/liver.jpg" alt="">
-            <p class='article__text'>Matt Targett and John McGinn .</p>
+            <p class='article__text'><span>|</span>Matt Targett and John McGinn .</p>
         </div>
         <div class="main-articles__article">
             <img src="img/sky sport.jpg" alt="">
