--- a/01-HTML-CSS/06-BEM model/amazon/Deal.html
+++ b/01-HTML-CSS/06-BEM model/amazon/Deal.html
@@ -54,7 +54,8 @@
         </div>
         
         <div class="dealGrid__dealbox--dealbox1">
-        <iframe  src="https://www.youtube.com/embed/iNxvsxU2rJE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <img src="img/dealbox1.jpg">
+           
          </div>
         <div class="dealGrid__dealbox">
             <img src="img/dealbox2.jpg">
