--- a/01-HTML-CSS/07-SCSS/Gaming-Website(Rasheed)/Gaming.html
+++ b/01-HTML-CSS/07-SCSS/Gaming-Website(Rasheed)/Gaming.html
@@ -18,17 +18,20 @@
 
         <nav class="nav-bar">
             <ul class="nav-bar__list">
-                <li>
-                    <a herf="#top-container"><i class="fas fa-dice-d6"></i>Home</a>
+                <li class="nav-bar__item">
+                    <a class="nav-bar__link" herf="#top-container"><i class="fas fa-dice-d6"></i>Home</a>
                 </li>
-                <li>
-                    <a href="#devices"><i class="fas fa-dice-d6"></i>Devices</a>
+
+                <li class="nav-bar__item">
+                    <a class="nav-bar__link" href="#devices"><i class="fas fa-dice-d6"></i>Devices</a>
                 </li>
-                <li>
-                    <a href="#cs-go"><i class="fas fa-dice-d6"></i>CS-GO</a>
+
+                <li class="nav-bar__item">
+                    <a class="nav-bar__link" href="#cs-go"><i class="fas fa-dice-d6"></i>CS-GO</a>
                 </li>
-                <li>
-                    <a href="#related-games"><i class="fas fa-dice-d6"></i>Related</a>
+
+                <li class="nav-bar__item">
+                    <a class="nav-bar__link" href="#related-games"><i class="fas fa-dice-d6"></i>Related</a>
                 </li>
             </ul>
         </nav>
@@ -45,13 +48,13 @@
 
             <div class="top-container__top-box top-box-a">
                 <h4>Halo </h4>
-                <p class="price">$99</p>
+                <p class="top-container__top-box__price">$99</p>
                 <a href="#" class="btn">Buy Now</a>
             </div>
 
             <div class="top-container__top-box top-box-b">
                 <h4>Counter-Strike </h4>
-                <p class="price">$149</p>
+                <p class="top-container__top-box__price">$149</p>
                 <a href="#" class="btn">Buy Now</a>
             </div>
         </section>
